# serializer version: 1
# name: test_inspect
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-89cac9f1",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b>1.0.0",
              "\u2502           \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2514\u2500\u2500 b-3.0.0"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PROJECT_ROOT]/scenarios/example.json",
            "prefix": "example-89cac9f1",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b>1.0.0",
              "\u2502           \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2514\u2500\u2500 b-3.0.0"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-89cac9f1",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b>1.0.0",
              "\u2502           \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2514\u2500\u2500 b-3.0.0"
            ]
          },
          {
            "name": "requires-package-does-not-exist",
            "packages": {},
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which does not exist.",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-package-does-not-exist-59108293",
            "tree": [
              "\u2514\u2500\u2500 root",
              "    \u2514\u2500\u2500 requires a",
              "        \u2514\u2500\u2500 unsatisfied: no versions for package"
            ]
          },
          {
            "name": "requires-exact-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==2.0.0"
              ]
            },
            "template": "simple",
            "description": "The user requires an exact version of package `a` but only other versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-exact-version-does-not-exist-bc5f5f6d",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0"
            ]
          },
          {
            "name": "requires-greater-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>1.0.0"
              ]
            },
            "template": "simple",
            "description": "The user requires a version of `a` greater than `1.0.0` but only smaller or equal versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-greater-version-does-not-exist-670431f9",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>1.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2514\u2500\u2500 a-1.0.0"
            ]
          },
          {
            "name": "requires-less-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a<2.0.0"
              ]
            },
            "template": "simple",
            "description": "The user requires a version of `a` less than `1.0.0` but only larger versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-less-version-does-not-exist-9a75991b",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a<2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2514\u2500\u2500 a-4.0.0"
            ]
          },
          {
            "name": "transitive-requires-package-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "template": "simple",
            "description": "The user requires package `a` but `a` requires package `b` which does not exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "transitive-requires-package-does-not-exist-ca79eaa2",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires b",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package"
            ]
          },
          {
            "name": "requires-direct-incompatible-versions",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0",
                "a==2.0.0"
              ]
            },
            "template": "simple",
            "description": "The user requires two incompatible, existing versions of package `a`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-direct-incompatible-versions-350bd4b0",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a==1.0.0",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-2.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2514\u2500\u2500 a-2.0.0"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-root-version",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b==1.0.0"
              ]
            },
            "template": "simple",
            "description": "The user requires packages `a` and `b` but `a` requires a different version of `b`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-root-version-3240dab1",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b==2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-2.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2514\u2500\u2500 b-2.0.0"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-transitive",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "c": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b"
              ]
            },
            "template": "simple",
            "description": "The user requires package `a` and `b`; `a` and `b` require different versions of `c`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-transitive-8329cfc0",
            "tree": [
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires c==1.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by c-1.0.0",
              "\u251c\u2500\u2500 b",
              "\u2502   \u2514\u2500\u2500 b-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires c==2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by c-2.0.0",
              "\u2514\u2500\u2500 c",
              "    \u251c\u2500\u2500 c-1.0.0",
              "    \u2514\u2500\u2500 c-2.0.0"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
